# dmlogger

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.sh
include/: dmlogger.h  dmutil.h
src/: logging.cc  stl_logging_unittest.cc
src/glog/: logging.h.in  stl_logging.h.in
src/windows/: port.cc  port.h
src/windows/glog/: logging.h  stl_logging.h
test/: dmloggertest.cc
